--- a/index.html
+++ b/index.html
@@ -57,14 +57,15 @@
     </div>
     
     <div id="content">
-        <h1>Happy Birthday!</h1>
+        <h1>He's Dr. Worm!<h1>
         <img src="TMBG.png" alt="Concert Ticket">
-        <p>You have tickets to see <strong>They Might Be Giants</strong>!</p>
+        <p>You have tickets to see <strong>They Might Be Giants</strong> on May 17th at the Orpheum Theatre!</p>
+        <h1>Happy Birthday!</h1>
     </div>
 
     <script>
         function checkPassword() {
-            const password = "drworm";
+            const password = "he likes to play the drums";
             const input = document.getElementById("passwordInput").value;
             if (input === password) {
                 document.getElementById("passwordPrompt").style.display = "none";
